--- a/localharvest/index.html
+++ b/localharvest/index.html
@@ -10,4 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
 </html>
